# builder

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  release.yml
src/: error.rs  logger.rs  main.rs  systems.rs  utils.rs
src/systems/: bun.rs  cmake.rs  custom.rs  deno.rs  docker.rs  dotnet.rs  flutter.rs  go.rs  gradle.rs  javascript.rs  just.rs  make.rs  maven.rs  mod.rs  node.rs  python.rs  rust.rs  swift.rs  uv.rs  zig.rs
tests/: integration_test.rs  repro.rs
tests/src/cmake/: CMakeLists.txt
tests/src/cmake_bin/: CMakeLists.txt
tests/src/flutter/: pubspec.yaml
tests/src/go/: go.mod
tests/src/gradle/: build.gradle
tests/src/make/: Makefile
tests/src/make_norun/: Makefile
tests/src/maven/: pom.xml
tests/src/maven/src/main/java/com/mycompany/app/: App.java
tests/src/node/: package.json
tests/src/swift/: Package.swift
tests/src/zig/: build.zig  build.zig.zon  main.zig
tests/src/zig/src/: main.zig
