[package]
name = "ybuild"
version = "1.0.0"
edition = "2024"
authors = ["Yanis Amani <107571716+DevYatsu@users.noreply.github.com>"]
description = "A minimalist, universal build utility for automatic project building"
license = "MIT"
repository = "https://github.com/DevYatsu/builder"
homepage = "https://github.com/DevYatsu/builder"
readme = "README.md"
keywords = ["build", "automation", "cli", "utility", "tool"]
categories = ["development-tools::build-utils", "command-line-utilities"]
include = ["src/**/*", "LICENSE", "README.md", "Cargo.toml"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-path = "{ name }{ bin-suffix }"
pkg-fmt = "tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
thiserror = "2.0.18"
log = "0.4.29"
pico-args = "0.5.0"
xshell = "0.2.7"
dialoguer = "0.12.0"
tinyjson = "2.5.1"
ctrlc = "3.5.2"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
